--- a/Glow_Prototype/Glow_Prototype.CSharp.csproj
+++ b/Glow_Prototype/Glow_Prototype.CSharp.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraFollow2D.cs" />
     <Compile Include="Assets\Scripts\CharacterController2D.cs" />
+    <Compile Include="Assets\Scripts\FallDetector.cs" />
+    <Compile Include="Assets\Scripts\GooBehavior.cs" />
     <Compile Include="Assets\Scripts\LightProjector.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\SetUpLightingCam.cs" />
