--- a/Glow_Prototype/Glow_Prototype.CSharp.csproj
+++ b/Glow_Prototype/Glow_Prototype.CSharp.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Shaders\AxisTester.shader" />
+    <None Include="Assets\Shaders\LMS_Visible.shader" />
     <None Include="Assets\Shaders\LightmappedSpriteShader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
