Added load level script

--- a/Glow_Prototype/Assembly-CSharp.csproj
+++ b/Glow_Prototype/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\FallDetector.cs" />
      <Compile Include="Assets\Scripts\GooBehavior.cs" />
      <Compile Include="Assets\Scripts\LightProjector.cs" />
+     <Compile Include="Assets\Scripts\LoadLevelUtil.cs" />
      <Compile Include="Assets\Scripts\MovingPlatform.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <None Include="Assets\Shaders\LMS_Visible.shader" />
