--- a/Glow_Unity/Glow_Unity.CSharp.csproj
+++ b/Glow_Unity/Glow_Unity.CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\AimingIconBehavior.cs" />
+    <Compile Include="Assets\Scripts\BombBehavior.cs" />
     <Compile Include="Assets\Scripts\CameraFollow2D.cs" />
     <Compile Include="Assets\Scripts\CharacterController2D.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
