--- a/Glow_Unity/Assembly-CSharp.csproj
+++ b/Glow_Unity/Assembly-CSharp.csproj
@@ -54,9 +54,8 @@
      <Compile Include="Assets\Scripts\GooBar.cs" />
      <Compile Include="Assets\Scripts\GooBehavior.cs" />
      <Compile Include="Assets\Scripts\LightProjector.cs" />
-     <Compile Include="Assets\Scripts\LoadLevelUtil.cs" />
      <Compile Include="Assets\Scripts\MovingPlatform.cs" />
-     <Compile Include="Assets\Scripts\Patroller.cs" />
+     <Compile Include="Assets\Scripts\PatrollerController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <None Include="Assets\Shaders\LMS_Visible.shader" />
      <None Include="Assets\Shaders\LMS_Tester.shader" />
