--- a/Glow_Unity/Glow_Unity.CSharp.csproj
+++ b/Glow_Unity/Glow_Unity.CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GooBar.cs" />
     <Compile Include="Assets\Scripts\GooBehavior.cs" />
+    <Compile Include="Assets\Scripts\HealthUI.cs" />
     <Compile Include="Assets\Scripts\LightProjector.cs" />
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\PatrollingEnemyController.cs" />
