--- a/Glow_Unity/Glow_Unity.CSharp.csproj
+++ b/Glow_Unity/Glow_Unity.CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Scripts\GooBehavior.cs" />
     <Compile Include="Assets\Scripts\HealthUI.cs" />
     <Compile Include="Assets\Scripts\LightProjector.cs" />
+    <Compile Include="Assets\Scripts\MeanderingEnemyController.cs" />
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\PatrollingEnemyController.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
