--- a/Glow_Unity/Glow_Unity.CSharp.csproj
+++ b/Glow_Unity/Glow_Unity.CSharp.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Assets\Scripts\PatrollingEnemyController.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\ShooterProjectileBehavior.cs" />
+    <Compile Include="Assets\Scripts\ShootingEnemyController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shaders\LMS_Tester.shader" />
