--- a/Glow_Unity/Glow_Unity.CSharp.csproj
+++ b/Glow_Unity/Glow_Unity.CSharp.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\Scripts\LightProjector.cs" />
     <Compile Include="Assets\Scripts\MeanderingEnemyController.cs" />
     <Compile Include="Assets\Scripts\MovingPlatform.cs" />
+    <Compile Include="Assets\Scripts\OpeningController.cs" />
     <Compile Include="Assets\Scripts\PatrollingEnemyController.cs" />
     <Compile Include="Assets\Scripts\Pickup.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
